[project]
name = "playbill"
version = "1.0.0"
description = "TOML-driven video program assembler — title cards, intros, episodes, credits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["numpy", "Pillow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]
